--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>javaexperience</groupId>
-  <artifactId>javaexperience-generic-storage</artifactId>
+  <artifactId>generic-storage</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>javaexperience-generic-storage</name>
@@ -17,6 +17,15 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>jvx-repo</id>
+			<name>Javaexprience-custom-repo</name>
+			<url>http://maven.javaexperience.eu/</url>
+		</repository>
+	</repositories>
+	
 
 	<dependencies>
 		<dependency>
