--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>javaexperience</groupId>
   <artifactId>generic-storage</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.1</version>
 
   <name>javaexperience-generic-storage</name>
   <!-- FIXME change it to the project's website -->
@@ -70,7 +70,7 @@
 				<configuration>
 				<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
-	        	</plugin>
+	        </plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
